Moved FastCGIProxyServlet in ee9 to FastCGIProxyHandler in core. Moved TryFilesFilter in ee9 to TryPathsHandler in core. Update Jetty modules to properly setup the class-path in case of proxy usage.
Updated and expanded test cases.

Signed-off-by: Simone Bordet <simone.bordet@gmail.com>